# obs-twitch-dashboard

./: .gitignore  Cargo.toml  LICENSE  README.md
obs/: Cargo.toml  README.md
obs/obs-sys/: Cargo.toml  README.md  build.rs
obs/obs-sys/src/: lib.rs
obs/src/: data.rs  lib.rs  mem.rs  output.rs  properties.rs  service.rs  source.rs
src/: lib.rs  obs_ffi.rs  url_open.rs
src/switcher/: index.js  mod.rs  token_server.rs
src/twitch/: channel.rs  client_id.txt  mod.rs
